[workspace]
resolver = "2"
members = [
    "server",
    "tools"
]
[patch.crates-io]

testcontainers = {git = "https://github.com/nmeylan/testcontainers-rs", rev = "9c2e0812c47160950f2cc85b0b612e3e5aed7ab0"}

[patch."https://github.com/nmeylan/rathena-script-lang-interpreter"]
#rathena_script_lang_interpreter = {path = "C:\\dev\\ragnarok\\ragnarok-script-interpreter"}
#rathena_script_lang_interpreter = {path = "/home/nmeylan/dev/ragnarok/ragnarok-script-interpreter"}

[profile.dev]
opt-level = 0
incremental = true

[profile.release.package."configuration"]
opt-level = 0
[profile.release.package."packets"]
opt-level = 0
[profile.release.package."tools"]
opt-level = 0