[workspace]
resolver = "2"
members = [
    "server",
    "tools"
]
[patch.crates-io]

testcontainers = {git = "https://github.com/nmeylan/testcontainers-rs", rev = "9c2e0812c47160950f2cc85b0b612e3e5aed7ab0"}

[patch."https://github.com/nmeylan/rathena-script-lang-interpreter"]
#rathena_script_lang_interpreter = {path = "C:\\dev\\ragnarok\\ragnarok-script-interpreter"}
#rathena_script_lang_interpreter = {path = "/home/nmeylan/dev/ragnarok/ragnarok-script-interpreter"}

[profile.dev]
opt-level = 0
incremental = true

[profile.release.package."configuration"]
opt-level = 0
[profile.release.package."packets"]
opt-level = 0
[profile.release.package."tools"]
opt-level = 0

[workspace.dependencies]
byteorder = "1.5.0"
lazy_static  = "1.4.0"
hashbrown = "0.14"
base64 = { version = "0.21.7", features = [] }
fastmurmur3 = "0.2.0"
regex-lite = "0.1.5"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
futures = "0.3"
sqlx = { version = "0.8.0", features = [ "postgres", "macros"], default-features = false }
sqlx-macros-core = { version = "0.8.0", features = [ "postgres", "_rt-tokio" ] }
rand = "0.8"
fastrand = "2.0.1"
flate2 = "1.0.28"
md5 = "0.7.0"
log = "0.4"
simple_logger = { version = "4.3.3", features = [], default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json  = "1.0.108"