[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
lazy_static  = "1.4.0"
regex = "1.5"
tokio = { version = "1.19.2", features = ["full", "tracing"] }
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
rand = "0.8"
fastrand = "1.8.0"
flate2 = "1.0"
md5 = "0.7.0"
log = "0.4"
flexi_logger = "0.24"
serde = { version = "1.0.152", features = ["derive"] }
serde_json  = "1.0.91"
eframe = { version = "0.20.1", default-features = false, features = ["glow", "default_fonts"], optional = true }
sprintf = "0.1.2"
async-trait = "0.1.60"

rathena_script_lang_interpreter = { git = "https://github.com/nmeylan/rathena-script-lang-interpreter", rev = "ae0775a9413df3f86b728a5f0bb15d8519614787"}

accessor = { path = "../lib/accessor" }
metrics = { path = "../lib/metrics" }
packets = { path = "../lib/packets" }
sql = { path = "../lib/sql" }
enums = { path = "../lib/enums" }


[[bin]]
name = "packets"
path = "../tools/packets/main.rs"
[[bin]]
name = "maps"
path = "../tools/map-cache/main.rs"

[features]
visual_debugger = ["eframe"]
static_db_update = []
