[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
lazy_static  = "1.4.0"
hashbrown = "0.14"
regex = { version = "1.10.2", features = ["default"] }
tokio = { version = "1.33.0", features = ["full", "tracing"] }
futures = "0.3"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "postgres" ] }
rand = "0.8"
fastrand = "2.0.1"
flate2 = "1.0.28"
md5 = "0.7.0"
log = "0.4"
flexi_logger = "0.24"
serde = { version = "1.0.190", features = ["derive"] }
serde_json  = "1.0.108"
eframe = { version = "0.20.1", default-features = false, features = ["glow", "default_fonts"], optional = true }
sprintf = "0.1.4"
async-trait = "0.1.74"
testcontainers = {  version= "0.15.0" }
testcontainers-modules = { version = "0.2.1", features = ["postgres"] }

rathena_script_lang_interpreter = { git = "https://github.com/nmeylan/rathena-script-lang-interpreter", rev = "8d9ff05b67cef7269d8e96eb9eb4dd9ea804675b"}

configuration = { path = "../lib/configuration" }
accessor = { path = "../lib/accessor" }
metrics = { path = "../lib/metrics" }
packets = { path = "../lib/packets" }
sql = { path = "../lib/sql" }
enums = { path = "../lib/enums" }
skills = { path = "../lib/skills" }
models = { path = "../lib/models" }


[[bin]]
name = "packets"
path = "../tools/packets/main.rs"
[[bin]]
name = "maps"
path = "../tools/map-cache/main.rs"

[features]
visual_debugger = ["eframe"]
static_db_update = []
debug_movement = []
debug_mob_movement = []
integration_tests = []
unit_tests = []