[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = {workspace = true}
lazy_static  = {workspace = true}
bitcode = {workspace = true}
hashbrown = {workspace = true}
base64 = {workspace = true}
fastmurmur3 = {workspace = true}
regex-lite = {workspace = true}
tokio = {workspace = true}
futures = {workspace = true}
sqlx = {workspace = true}
sqlx-macros-core = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand = {workspace = true}
fastrand = {workspace = true}
flate2 = {workspace = true}
md5 = {workspace = true}
serde = {workspace = true}
serde_json  = {workspace = true}
eframe = { version = "0.30.0", default-features = false, features = ["glow", "default_fonts"], optional = true }
egui_extras = {version = "0.30.0", features = []}
winit = {version = "0.30.8", default-features = false, optional = true}
sprintf = "0.1.4"
async-trait = "0.1.74"

testcontainers = {  version= "0.15.0" , optional = true }
testcontainers-modules = { version = "0.2.1", features = ["postgres"], optional = true  }

rathena_script_lang_interpreter = { git = "https://github.com/nmeylan/rathena-script-lang-interpreter", rev = "c856050"}

configuration = { path = "../lib/configuration" }
accessor = { path = "../lib/accessor" }
metrics = { path = "../lib/metrics" }
packets = { path = "../lib/packets" }
sql = { path = "../lib/sql" }
skills = { path = "../lib/skills" }
models = { path = "../lib/models" }


[[bin]]
name = "packets"
path = "../tools/packets/main.rs"
[[bin]]
name = "maps"
path = "../tools/map-cache/main.rs"

[features]
visual_debugger = ["eframe", "winit"]
static_db_update = []
debug_movement = []
debug_mob_movement = []
integration_tests = ["testcontainers", "testcontainers-modules"]
unit_tests = []