[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
lazy_static  = "1.4.0"
regex = "1.5"
tokio = { version = "1.12", features = ["full"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
serde_path_to_error = "0.1"
convert_case = "0.6.0"
futures = "0.3"
flate2 = "1.0"
md5 = "0.7.0"
log = "0.4"
flexi_logger = "0.19"

configuration = { path = "../lib/configuration" }
enums = { path = "../lib/enums" }

[[bin]]
name = "packets-tool"
path = "packets/main.rs"
[[bin]]
name = "maps-tool"
path = "map-cache/main.rs"
[[bin]]
name = "skills-enum-generator"
path = "skills/main.rs"