[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
lazy_static  = "1.4.0"
regex-lite = "0.1.5"
tokio = { version = "1.12", features = ["full"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
serde_path_to_error = "0.1"
convert_case = "0.6.0"
futures = "0.3"
flate2 = "1.0"
md5 = "0.7.0"
log = "0.4"
rand = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
postgres = { version = "0.19.9", default-features = false, features = ["array-impls"] }

configuration = { path = "../lib/configuration" }
models = { path = "../lib/models" }


[[bin]]
name = "packets-tool"
path = "packets/main.rs"
[[bin]]
name = "maps-tool"
path = "map-cache/main.rs"
[[bin]]
name = "job-config-tool"
path = "job-config/main.rs"
[[bin]]
name = "skills-struct-generator"
path = "skills/main.rs"
[[bin]]
name = "account-setup"
path = "account-setup/main.rs"


[features]
generate_override_stub = []

